# echarge-vnext

./: .gitignore  docker-compose.yml
dotnet/: Directory.Build.props  eCharge.sln  eCharge.sln.DotSettings
dotnet/src/server/ECharge.Car.Api/: Dockerfile  ECharge.Car.Api.csproj  Program.cs  Startup.cs  appsettings.json
dotnet/src/server/ECharge.Car.Api/GraphQl/: Mutation.cs  Query.cs
dotnet/src/server/ECharge.Car.Data.Entities/: Car.cs  ECharge.Car.Data.Entities.csproj
dotnet/src/server/ECharge.Car.Data.Entities/Configuration/: Car.cs
dotnet/src/server/ECharge.Car.Events/: CarAdded.cs  CarDeleted.cs  CarEdited.cs  ECharge.Car.Events.csproj
dotnet/src/server/ECharge.Car.Events/Interfaces/: ICarAdded.cs  ICarDeleted.cs  ICarEdited.cs
dotnet/src/server/ECharge.Car.Mapping/: ECharge.Car.Mapping.csproj
dotnet/src/server/ECharge.Car.Mapping/Profiles/: Car.cs
dotnet/src/server/ECharge.Car.Models/: Car.cs  ECharge.Car.Models.csproj
dotnet/src/server/ECharge.Car.Query/: ECharge.Car.Query.csproj
dotnet/src/server/ECharge.Core/: ECharge.Core.csproj
dotnet/src/server/ECharge.Data.Entities/: ECharge.Data.Entities.csproj  IEntity.cs
dotnet/src/server/ECharge.Data.Entities.MongoDb/: ECharge.Data.Entities.MongoDb.csproj
dotnet/src/server/ECharge.EventSourcing.EventStore/: ECharge.EventSourcing.EventStore.csproj
rust/: Cargo.toml
rust/car/api/: Cargo.toml
rust/car/api/src/: lib.rs  main.rs
rust/car/api/src/graphql/: events.rs  inputs.rs  mod.rs  models.rs  mutation.rs  query.rs
rust/car/lib/: Cargo.toml
rust/car/lib/src/: events.rs
rust/car/lib/src/persistence/read/: mod.rs  models.rs  repository.rs
rust/car/lib/src/persistence/write/: mod.rs
rust/car/worker/: Cargo.toml
rust/car/worker/src/: lib.rs  main.rs
(+25 files in other folders)
