[package]
name = "echarge-car-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0.128", features = ["derive"] }
eventstore = "1.0.0"
mongodb = "2.0.0-beta.3"
futures = "0.3.16"
