[package]
name = "echarge-car-worker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
echarge-car-lib = { path = "../lib" }
dotenv = "0.15.0"
tokio = { version = "1.10.1", features = ["full"] }
eventstore = "1.0.0"
mongodb = "2.0.0-beta.3"